Updated pom.xml to include dependencies when packaging project. Added manifest. Updated classes that read resources to use getResource instead of opening files with hardcoded paths.